crates/reinhardt-pages/tests/ui/style/fail/ambiguous_selector.stderr
error: style syntax error: selector heads must contain exactly one simple selector; express relationships and refinements with nested rules
 --> tests/ui/style/fail/ambiguous_selector.rs:4:43
  |
4 | static STYLES: CardStyles = style! { .card.label { color: red; } };
  |                                           ^
